--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Projektien testisivusto
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Tällä sivustolla testataan projektisivuston toiminnallisuutta.
+  Jatkuvan oppimisen julkaisualustan demo-sivut. Testaan tällä sivustolla GitHub pages käyttöä projektien julkaisussa.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
@@ -29,7 +29,7 @@ github_username:  jekyll
 
 # Build settings
 # theme: minima
-remote_theme: pages-themes/tactile@v0.2.0
+remote_theme: pages-themes/modernist@v0.2.0
 plugins:
   # - jekyll-feed
   - jekyll-remote-theme
