--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github_username:  jekyll
 
 # Build settings
 # theme: minima
-remote_theme: pages-themes/time-machine@v0.2.0
+remote_theme: pages-themes/modernist@v0.2.0
 plugins:
   # - jekyll-feed
   - jekyll-remote-theme
