--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,7 @@ title: Projektien testisivusto
 description: Jatkuvan oppimisen julkaisualustan demo-sivut. Testaan tällä sivustolla GitHub pages käyttöä projektien julkaisussa.
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
