--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Projektien testisivusto
-description: Jatkuvan oppimisen julkaisualustan demo-sivut. Testaan tällä sivustolla GitHub pages käyttöä projektien julkaisussa.
+title: Jatkuvan oppimisen alusta
+description: Jatkuvan oppimisen alustan demo-sivut. Sivusto on nyt testivaiheessa!
 show_downloads: false
 google_analytics:
 remote_theme: pages-themes/cayman@v0.2.0
