--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Jatkuvan oppimisen alusta
 description: Jatkuvan oppimisen alustan demo-sivut. Sivusto on nyt testivaiheessa!
 show_downloads: false
 google_analytics:
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
